--- a/1_LinuxFundamental.html
+++ b/1_LinuxFundamental.html
@@ -1,6 +1,5 @@
 <iframe 
-  src="https://docs.google.com/document/d/1jtIax84dSgMxRFT8EYtndAFHBcK8lq_r/preview"
+  src="https://docs.google.com/document/d/1jtIax84dSgMxRFT8EYtndAFHBcK8lq_r/pub?embedded=true"
   style="width:100%; height:800px;"
   frameborder="0">
 </iframe>
-
