--- a/1_LinuxFundamental.html
+++ b/1_LinuxFundamental.html
@@ -1,5 +1,5 @@
 <iframe 
-  src="https://docs.google.com/document/d/1jtIax84dSgMxRFT8EYtndAFHBcK8lq_r/pub?embedded=true"
+  src="https://docs.google.com/document/d/1jtIax84dSgMxRFT8EYtndAFHBcK8lq_r/edit?usp=sharing&ouid=118272076859744962833&rtpof=true&sd=true"
   style="width:100%; height:800px;"
   frameborder="0">
 </iframe>
