--- a/1_LinuxFundamental.html
+++ b/1_LinuxFundamental.html
@@ -1,5 +1,5 @@
 <iframe 
-  src="https://docs.google.com/document/d/e/2PACX-1vRHVMueLJCw6sm_r9s0kjlzSgmxtloAZw199Ep_mwfr1FXa7TS4glVwfqFUAzFoOQ/pub"
+  src="https://docs.google.com/document/d/e/2PACX-1vRHVMueLJCw6sm_r9s0kjlzSgmxtloAZw199Ep_mwfr1FXa7TS4glVwfqFUAzFoOQ/pub?embedded=true"
   style="width:100%; height:800px;"
   frameborder="0">
 </iframe>
