--- a/index.html
+++ b/index.html
@@ -1,18 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cybersecurity Project Showcase</title>
-</head>
 <body style="font-family:Arial; padding:40px; background-color:#f8f9fa;">
   <h1>🛡️ Cybersecurity Project Showcase</h1>
   <p>This site showcases the projects I have completed during my studies at the Centre for Cybersecurity (CFC).</p>
 
-  <h2>📂 Project List</h2>
-  <ul>
-    <li><a href="1_LinuxFundamental.html">Linux Fundamentals Project</a></li>
-    <!-- Add more project links here later -->
-  </ul>
+  <h2>📄 Linux Fundamentals Project</h2>
+
+  <!-- Embedded Google Doc -->
+  <iframe 
+    src="https://docs.google.com/document/d/e/2PACX-1vRHVMueLJCw6sm_r9s0kjlzSgmxtloAZw199Ep_mwfr1FXa7TS4glVwfqFUAzFoOQ/pub?embedded=true"
+    style="width:100%; height:800px;"
+    frameborder="0">
+  </iframe>
 </body>
-</html>
