--- a/index.html
+++ b/index.html
@@ -4,16 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cybersecurity Project Showcase</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 40px;
+      background-color: #f8f9fa;
+      text-align: center; /* Center headings and text */
+    }
+    .iframe-container {
+      display: flex;
+      justify-content: center; /* center horizontally */
+      margin-top: 30px;
+    }
+    iframe {
+      width: 80%;      /* adjust width of embedded doc */
+      height: 900px;   /* adjust height */
+      border: none;
+    }
+  </style>
 </head>
-<body style="font-family:Arial; padding:40px; background-color:#f8f9fa;">
+<body>
   <h1>🛡️ Cybersecurity Project Showcase</h1>
   <p>This site showcases the projects I have completed during my studies at the Centre for Cybersecurity (CFC).</p>
 
   <h2>📂 Linux Fundamentals Project</h2>
-  <iframe 
-    src="https://docs.google.com/document/d/e/2PACX-1vRHVMueLJCw6sm_r9s0kjlzSgmxtloAZw199Ep_mwfr1FXa7TS4glVwfqFUAzFoOQ/pub?embedded=true"
-    style="width:100%; height:900px; border:none;"
-    frameborder="0">
-  </iframe>
+
+  <div class="iframe-container">
+    <iframe 
+      src="https://docs.google.com/document/d/e/2PACX-1vRHVMueLJCw6sm_r9s0kjlzSgmxtloAZw199Ep_mwfr1FXa7TS4glVwfqFUAzFoOQ/pub?embedded=true">
+    </iframe>
+  </div>
 </body>
 </html>
