--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
     }
 
     .iframe-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       width: 100%;
       margin-top: 30px;
-      display: flex;
-      justify-content: center; /* centers the iframe horizontally */
     }
 
     iframe {
-      display: block;          /* ensures flexbox can center it */
-      width: 80%;              /* adjust width as needed */
-      max-width: 1000px;       /* optional max width */
-      height: 900px;           /* adjust height */
+      display: block;
+      width: 80%;
+      max-width: 1000px;
+      height: 900px;
       border: none;
     }
   </style>
@@ -40,7 +41,8 @@
 
   <div class="iframe-container">
     <iframe 
-      src="https://docs.google.com/document/d/e/2PACX-1vRHVMueLJCw6sm_r9s0kjlzSgmxtloAZw199Ep_mwfr1FXa7TS4glVwfqFUAzFoOQ/pub?embedded=true">
+      src="https://docs.google.com/document/d/e/2PACX-1vRHVMueLJCw6sm_r9s0kjlzSgmxtloAZw199Ep_mwfr1FXa7TS4glVwfqFUAzFoOQ/pub?embedded=true"
+      allowfullscreen>
     </iframe>
   </div>
 </body>
