--- a/1_LinuxFundamental.html
+++ b/1_LinuxFundamental.html
@@ -1,5 +1,4 @@
 <iframe 
   src="https://docs.google.com/document/d/e/2PACX-1vR4Il8nldghWYD3bg2Zms5AHSf90BSTN2aJKaqTsIEUhaxB_73AoRuXLcdKiwpmHUAmUfNT2FsR-3zb/pub?embedded=true"
-  style="width:100%; height:800px;"
-  frameborder="0">
+  style="width:80%; height:900px; border:1px solid #ccc; display:block; margin:0 auto;">
 </iframe>
