--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
   <div class="iframe-container">
     <iframe 
-      src="https://docs.google.com/document/d/e/2PACX-1vRHVMueLJCw6sm_r9s0kjlzSgmxtloAZw199Ep_mwfr1FXa7TS4glVwfqFUAzFoOQ/pub?embedded=true"
-      allowfullscreen>
+     src="docs/LinuxFundamentals.pdf" 
+    style="width:80%; height:900px; border:1px solid #ccc;">
     </iframe>
   </div>
 </body>
