--- a/index.html
+++ b/index.html
@@ -4,6 +4,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cybersecurity Project Showcase</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 40px;
+      background-color: #f8f9fa;
+      margin: 0;
+    }
+
+    h1, h2, p {
+      text-align: center;
+    }
+
+    .iframe-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      margin-top: 30px;
+    }
+
+    iframe {
+      display: block;
+      width: 80%;
+      max-width: 1000px;
+      height: 900px;
+      border: none;
+    }
+  </style>
 </head>
 <body>
   <h1>🛡️ Cybersecurity Project Showcase</h1>
@@ -11,11 +39,9 @@
 
   <h2>📂 Linux Fundamentals Project</h2>
 
-  <div class="iframe-container">
     <iframe 
      src="docs/LinuxFundamentals.pdf" 
     style="width:80%; height:900px; border:1px solid #ccc;">
     </iframe>
-  </div>
 </body>
 </html>
