--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
   <p>This site showcases the projects I have completed during my studies at the Centre for Cybersecurity (CFC).</p>
 
   <h2>📂 Linux Fundamentals Project</h2>
-
+<div class=iframe-container>
     <iframe 
-     src="docs/LinuxFundamentals.pdf" 
+     src="docs/1_LinuxFundamentals.pdf" 
     style="width:80%; height:900px; border:1px solid #ccc;">
     </iframe>
+  </div>
 </body>
 </html>
