--- a/index.html
+++ b/index.html
@@ -45,5 +45,13 @@
       allowfullscreen>
     </iframe>
   </div>
+
+  <h2>📂 Network Mapping and Wireshark Project</h2>
+
+  <div class="iframe-container">
+    <iframe src="https://docs.google.com/document/d/e/2PACX-1vTkea9xLOczoRdkq1MpyJaY1fValwSxTAz3MCqrH3_6u6LBW0xdXzviMAex5ZCZXw/pub?embedded=true"
+      allowfullscreen>
+      </iframe>
+  </div>
 </body>
 </html>
