--- a/index.html
+++ b/index.html
@@ -40,10 +40,7 @@
   <h2>📂 Linux Fundamentals Project</h2>
 
   <div class="iframe-container">
-    <iframe 
-      src="https://docs.google.com/document/d/e/2PACX-1vRHVMueLJCw6sm_r9s0kjlzSgmxtloAZw199Ep_mwfr1FXa7TS4glVwfqFUAzFoOQ/pub?embedded=true"
-      allowfullscreen>
-    </iframe>
+    <iframe src="https://docs.google.com/document/d/e/2PACX-1vTR2DE5h6m8sTde1KhdBoHc-hnShGEiOTMskD6AThUo79QrQ2KklyrzcnIrj5pUOw/pub?embedded=true"allowfullscreen></iframe>
   </div>
 </body>
 </html>
