--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
 
     .iframe-container {
-      display: flex;
+      display: fit;
       justify-content: center;
       align-items: center;
       width: 100%;
