--- a/index.html
+++ b/index.html
@@ -7,51 +7,31 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #e9ecef;
-      margin: 0;
-      padding: 40px 0;
-    }
-
-    h1, h2, p {
+      background: #f8f9fa;
       text-align: center;
-      margin: 0 0 20px;
-    }
-
-    .iframe-container {
-      display: flex;
-      justify-content: center;
-      margin-top: 40px;
+      margin: 0;
+      padding: 40px;
     }
 
     iframe {
       width: 80%;
-      max-width: 900px;
+      max-width: 1000px;
       height: 900px;
-      border: none;
-      background: white;
-      box-shadow: 0 0 15px rgba(0,0,0,0.2);
-      border-radius: 8px;
-    }
-
-    /* Simulate page gaps */
-    iframe::after {
-      content: "";
+      border: 1px solid #ccc;
       display: block;
-      height: 40px;
-      background: #e9ecef;
+      margin: 30px auto;
+      border-radius: 8px;
     }
   </style>
 </head>
 <body>
   <h1>🛡️ Cybersecurity Project Showcase</h1>
-  <p>This site showcases the projects I completed during my studies at the Centre for Cybersecurity (CFC).</p>
+  <p>This site showcases the projects I have completed during my studies at the Centre for Cybersecurity (CFC).</p>
 
   <h2>📂 Linux Fundamentals Project</h2>
 
-  <div class="iframe-container">
-    <iframe 
-      src="https://docs.google.com/document/d/e/2PACX-1vTR2DE5h6m8sTde1KhdBoHc-hnShGEiOTMskD6AThUo79QrQ2KklyrzcnIrj5pUOw/pub?embedded=true">
-    </iframe>
-  </div>
+  <iframe 
+    src="https://docs.google.com/document/d/e/2PACX-1vTR2DE5h6m8sTde1KhdBoHc-hnShGEiOTMskD6AThUo79QrQ2KklyrzcnIrj5pUOw/pub?embedded=true">
+  </iframe>
 </body>
 </html>
