--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <h2>📂 Linux Fundamentals Project</h2>
 
   <iframe 
-    src="https://docs.google.com/document/d/e/2PACX-1vTR2DE5h6m8sTde1KhdBoHc-hnShGEiOTMskD6AThUo79QrQ2KklyrzcnIrj5pUOw/pub?embedded=true">
+    src="https://docs.google.com/document/d/e/2PACX-1vTR2DE5h6m8sTde1KhdBoHc-hnShGEiOTMskD6AThUo79QrQ2KklyrzcnIrj5pUOw/pub?">
   </iframe>
 </body>
 </html>
