--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <h2>📂 Linux Fundamentals Project</h2>
 
   <iframe 
-    src="docs/1_LinuxFundamental.pdf">
+    src="docs/1_LinuxFundamental.pdf"allowfullscreen
   </iframe>
 </body>
 </html>
