--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
       margin: 0;
       padding: 40px;
     }
+    iframe {
+      width: 80%;
+      max-width: 1000px;
+      height: 900px;
+      border: 1px solid #ccc;
+      display: block;
+      margin: 30px auto;
+      border-radius: 8px;
+    }
   </style>
 </head>
 <body>
