--- a/index.html
+++ b/index.html
@@ -10,16 +10,30 @@
       background: #f8f9fa;
       text-align: center;
       margin: 0;
-      padding: 40px;
+      padding: 40px 10px;
     }
+
+    h1, h2, p {
+      margin: 10px 0;
+    }
+
     iframe {
-      width: 80%;
-      max-width: 1000px;
-      height: 900px;
+      width: 90%;
+      max-width: 900px;
+      height: 80vh; /* Viewport height: adjusts to screen */
       border: 1px solid #ccc;
       display: block;
       margin: 30px auto;
       border-radius: 8px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Make it look good on smaller screens */
+    @media (max-width: 768px) {
+      iframe {
+        width: 100%;
+        height: 70vh;
+      }
     }
   </style>
 </head>
@@ -30,7 +44,8 @@
   <h2>📂 Linux Fundamentals Project</h2>
 
   <iframe 
-    src="docs/1_LinuxFundamental.pdf"allowfullscreen
+    src="docs/1_LinuxFundamental.pdf"
+    allowfullscreen>
   </iframe>
 </body>
 </html>
