--- a/index.html
+++ b/index.html
@@ -47,5 +47,9 @@
     src="docs/1_LinuxFundamental.pdf"
     allowfullscreen>
   </iframe>
+
+  <!-- Second project -->
+  <h2>📂 Network Map and Wireshark Project</h2>
+  <iframe src="docs/2_NetworkMap_Wireshark.pdf" allowfullscreen></iframe>
 </body>
 </html>
