--- a/index.html
+++ b/index.html
@@ -51,5 +51,9 @@
   <!-- Second project -->
   <h2>📂 Network Map and Wireshark Project</h2>
   <iframe src="docs/2_NetworkMap_Wireshark.pdf" allowfullscreen></iframe>
+
+  <!-- Second project -->
+  <h2>📂 Bash Scripting Automation and Network Research Project</h2>
+  <iframe src="docs/3_NetworkResearch_BashScriptingAutomation.pdf" allowfullscreen></iframe>
 </body>
 </html>
