--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
   <h2>📂 Linux Fundamentals Project</h2>
 
   <iframe 
-    src="docs/1_LinuxFundamental.pdf"
-    allowfullscreen>
-  </iframe>
+  src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/1_LinuxFundamental.pdf"
+  style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
+</iframe>
+
 
   <!-- Second project -->
   <h2>📂 Network Map and Wireshark Project</h2>
