--- a/index.html
+++ b/index.html
@@ -51,10 +51,16 @@
 
   <!-- Second project -->
   <h2>📂 Network Map and Wireshark Project</h2>
-  <iframe src="docs/2_NetworkMap_Wireshark.pdf" allowfullscreen></iframe>
+  <iframe 
+    src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/2_NetworkMap_Wireshark.pdf" 
+    style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
+    </iframe>
 
   <!-- Second project -->
   <h2>📂 Bash Scripting Automation and Network Research Project</h2>
-  <iframe src="docs/3_NetworkResearch_BashScriptingAutomation.pdf" allowfullscreen></iframe>
+  <iframe 
+    src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/3_NetworkResearch_BashScriptingAutomation.pdf" 
+     style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
+    </iframe>
 </body>
 </html>
