--- a/index.html
+++ b/index.html
@@ -62,5 +62,11 @@
     src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/3_NetworkResearch_BashScriptingAutomation.pdf" 
      style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
     </iframe>
+
+  <h2>📂 Python Fundamentals Project</h2>
+  <iframe 
+    src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/4_PythonFundamentals.pdf" 
+     style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
+    </iframe>
 </body>
 </html>
