--- a/index.html
+++ b/index.html
@@ -28,6 +28,55 @@
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     }
 
+    /* Horizontal scroll container for certificates */
+    .certificates-container {
+      display: flex;
+      overflow-x: auto;
+      scroll-behavior: smooth;
+      gap: 20px;
+      padding: 20px;
+      margin: 25px auto;
+      max-width: 95%;
+      border-top: 1px solid #ddd;
+      border-bottom: 1px solid #ddd;
+    }
+
+    .certificates-container iframe {
+      flex: 0 0 auto;
+      width: 300px;
+      height: 400px;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+      transition: transform 0.2s ease;
+    }
+
+    .certificates-container iframe:hover {
+      transform: scale(1.03);
+    }
+
+    .certificates-container::-webkit-scrollbar {
+      height: 8px;
+    }
+    .certificates-container::-webkit-scrollbar-thumb {
+      background: #bbb;
+      border-radius: 10px;
+    }
+    .certificates-container::-webkit-scrollbar-thumb:hover {
+      background: #888;
+    }
+
+    @media (max-width: 768px) {
+      iframe {
+        width: 100%;
+        height: 70vh;
+      }
+      .certificates-container iframe {
+        width: 240px;
+        height: 320px;
+      }
+    }
+
     /* Make it look good on smaller screens */
     @media (max-width: 768px) {
       iframe {
@@ -41,6 +90,15 @@
   <h1>🛡️ Cybersecurity Project Showcase</h1>
   <p>This site showcases the projects I have completed during my studies at the Centre for Cybersecurity (CFC).</p>
 
+   <!-- Horizontal scrolling certificate PDFs -->
+  <div class="certificates-container">
+    <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certificates/Intro To Cybersecurity_Ivan Wong.pdf"></iframe>
+    <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certificates/Linux Fundamentals_Ivan Wong.pdf"></iframe>
+    <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certificates/Network Research_Ivan Wong.pdf"></iframe>
+    <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certificates/Penetration Testing_Ivan Wong.pdf"></iframe>
+    <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certificates/Python Fundamentals_Ivan Wong.pdf"></iframe>
+  </div>
+  
   <h2>📂 Linux Fundamentals Project</h2>
 
   <iframe 
