--- a/index.html
+++ b/index.html
@@ -88,17 +88,28 @@
 </head>
 <body>
   <h1>🛡️ Cybersecurity Project Showcase</h1>
-  <p>This site showcases the projects I have completed during my studies at the Centre for Cybersecurity (CFC).</p>
+  <p>This site showcases the certificates and projects I have completed during the Cybersecurity Career Kickstart Programme (2023) run by Centre for Cybersecurity (CFC).</p>
 
    <!-- Horizontal scrolling certificate PDFs -->
   <div class="certificates-container">
+    <h1>🛡️ Certificates obtained from Cybersecurity Career Kickstart Programme (2023) </h1>
     <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certs/Intro To Cybersecurity_Ivan Wong.pdf"></iframe>
     <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certs/Linux Fundamentals_Ivan Wong.pdf"></iframe>
     <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certs/Network Research_Ivan Wong.pdf"></iframe>
     <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certs/Penetration Testing_Ivan Wong.pdf"></iframe>
     <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certs/Python Fundamentals_Ivan Wong.pdf"></iframe>
   </div>
-  
+
+  <h1>🛡️ The List of Projects I've accomplished</h1>
+  <p>
+  There are four main projects done, and these are the summaries for them:
+</p>
+<ul style="list-style-type: none; padding: 0; text-align: left; max-width: 700px; margin: 20px auto; line-height: 1.8;">
+  <li>🧠 <strong>Linux Fundamentals:</strong> Introduction to essential Linux commands, file permissions, and system navigation.</li>
+  <li>🌐 <strong>Network Map and Wireshark:</strong> Understanding network topology and analyzing packets using Wireshark.</li>
+  <li>⚙️ <strong>Bash Scripting Automation and Network Research:</strong> Automating network tasks and conducting research on protocols.</li>
+  <li>🐍 <strong>Python Fundamentals:</strong> Core programming concepts learned using Python scripting.</li>
+</ul>
   <h2>📂 Linux Fundamentals Project</h2>
 
   <iframe 
