--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
   <p>This site showcases the certificates and projects I have completed during the Cybersecurity Career Kickstart Programme (2023) run by Centre for Cybersecurity (CFC).</p>
 
    <!-- Horizontal scrolling certificate PDFs -->
+  <h1>🛡️ Certificates obtained from Cybersecurity Career Kickstart Programme (2023) </h1>
   <div class="certificates-container">
-    <h1>🛡️ Certificates obtained from Cybersecurity Career Kickstart Programme (2023) </h1>
     <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certs/Intro To Cybersecurity_Ivan Wong.pdf"></iframe>
     <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certs/Linux Fundamentals_Ivan Wong.pdf"></iframe>
     <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certs/Network Research_Ivan Wong.pdf"></iframe>
@@ -100,9 +100,9 @@
     <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certs/Python Fundamentals_Ivan Wong.pdf"></iframe>
   </div>
 
-  <h1>🛡️ The List of Projects I've accomplished</h1>
+  <h1>🛡️ The List of Projects</h1>
   <p>
-  There are four main projects done, and these are the summaries for them:
+  <br>There are four main projects showcased here, and these are the summaries for them:
 </p>
 <ul style="list-style-type: none; padding: 0; text-align: left; max-width: 700px; margin: 20px auto; line-height: 1.8;">
   <li>🧠 <strong>Linux Fundamentals:</strong> Introduction to essential Linux commands, file permissions, and system navigation.</li>
@@ -110,7 +110,7 @@
   <li>⚙️ <strong>Bash Scripting Automation and Network Research:</strong> Automating network tasks and conducting research on protocols.</li>
   <li>🐍 <strong>Python Fundamentals:</strong> Core programming concepts learned using Python scripting.</li>
 </ul>
-  <h2>📂 Linux Fundamentals Project</h2>
+  <h2>🧠 Linux Fundamentals Project</h2>
 
   <iframe 
   src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/1_LinuxFundamental.pdf"
@@ -119,20 +119,20 @@
 
 
   <!-- Second project -->
-  <h2>📂 Network Map and Wireshark Project</h2>
+  <h2>🌐 Network Map and Wireshark Project</h2>
   <iframe 
     src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/2_NetworkMap_Wireshark.pdf" 
     style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
     </iframe>
 
   <!-- Second project -->
-  <h2>📂 Bash Scripting Automation and Network Research Project</h2>
+  <h2>⚙️ Bash Scripting Automation and Network Research Project</h2>
   <iframe 
     src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/3_NetworkResearch_BashScriptingAutomation.pdf" 
      style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
     </iframe>
 
-  <h2>📂 Python Fundamentals Project</h2>
+  <h2>🐍 Python Fundamentals Project</h2>
   <iframe 
     src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/4_PythonFundamentals.pdf" 
      style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
