--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </head>
 <body>
   <h1>🛡️ Cybersecurity Project Showcase</h1>
-  <p>This site showcases the certificates and projects I have completed during the Cybersecurity Career Kickstart Programme (2023) run by Centre for Cybersecurity (CFC).</p>
+  <p><br>This site showcases the certificates and projects I have completed during the Cybersecurity Career Kickstart Programme (2023) run by Centre for Cybersecurity (CFC).<br><br></p>
 
    <!-- Horizontal scrolling certificate PDFs -->
   <h1>🛡️ Certificates obtained from Cybersecurity Career Kickstart Programme (2023) </h1>
@@ -110,7 +110,7 @@
   <li>⚙️ <strong>Bash Scripting Automation and Network Research:</strong> Automating network tasks and conducting research on protocols.</li>
   <li>🐍 <strong>Python Fundamentals:</strong> Core programming concepts learned using Python scripting.</li>
 </ul>
-  <h2>🧠 Linux Fundamentals Project</h2>
+  <h2><br>🧠 Linux Fundamentals Project</h2>
 
   <iframe 
   src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/1_LinuxFundamental.pdf"
