--- a/index.html
+++ b/index.html
@@ -119,20 +119,20 @@
 
 
   <!-- Second project -->
-  <h2>🌐 Network Map and Wireshark Project</h2>
+  <h2><br>🌐 Network Map and Wireshark Project</h2>
   <iframe 
     src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/2_NetworkMap_Wireshark.pdf" 
     style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
     </iframe>
 
   <!-- Second project -->
-  <h2>⚙️ Bash Scripting Automation and Network Research Project</h2>
+  <h2><br>⚙️ Bash Scripting Automation and Network Research Project</h2>
   <iframe 
     src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/3_NetworkResearch_BashScriptingAutomation.pdf" 
      style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
     </iframe>
 
-  <h2>🐍 Python Fundamentals Project</h2>
+  <h2><br>🐍 Python Fundamentals Project</h2>
   <iframe 
     src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/4_PythonFundamentals.pdf" 
      style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
