--- a/index.html
+++ b/index.html
@@ -96,45 +96,44 @@
     <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certs/Intro To Cybersecurity_Ivan Wong.pdf"></iframe>
     <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certs/Linux Fundamentals_Ivan Wong.pdf"></iframe>
     <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certs/Network Research_Ivan Wong.pdf"></iframe>
-    <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certs/Penetration Testing_Ivan Wong.pdf"></iframe>
     <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certs/Python Fundamentals_Ivan Wong.pdf"></iframe>
+    <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certs/Penetration Testing_Ivan Wong.pdf"></iframe>
   </div>
 
-  <h1>🛡️ The List of Projects</h1>
+  <h1>🛡️ List of Projects</h1>
   <p>
   <br>There are four main projects showcased here, and these are the summaries for them:
 </p>
 <ul style="list-style-type: none; padding: 0; text-align: left; max-width: 700px; margin: 20px auto; line-height: 1.8;">
-  <li>🧠 <strong>Linux Fundamentals:</strong> Introduction to essential Linux commands, file permissions, and system navigation.</li>
-  <li>🌐 <strong>Network Map and Wireshark:</strong> Understanding network topology and analyzing packets using Wireshark.</li>
-  <li>⚙️ <strong>Bash Scripting Automation and Network Research:</strong> Automating network tasks and conducting research on protocols.</li>
-  <li>🐍 <strong>Python Fundamentals:</strong> Core programming concepts learned using Python scripting.</li>
+  <li>🧠 <strong>[Intro to Cybersecurity]:</strong> Understanding Network Map & Wireshark Usage.</li>
+  <li>🧠 <strong>[Linux Fundamentals]:</strong> Understanding the usage of bash scripting in Linux Fundamental.</li>
+  <li>🌐 <strong>[Network Research]:</strong> Bash Scripting Automation and Network Research.</li>
+  <li>🐍 <strong>[Python Fundamentals]:</strong> Understanding core programming concepts using Python scripting.</li>
+  <li>⚙️ <strong>[Penetration Testing]:</strong> Utilize scripting for comprehensive device mapping, identifying ports, services, and vulnerabilities.</li>
 </ul>
-  <h2><br>🧠 Linux Fundamentals Project</h2>
-
-  <iframe 
-  src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/1_LinuxFundamental.pdf"
-  style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
-</iframe>
-
-
-  <!-- Second project -->
-  <h2><br>🌐 Network Map and Wireshark Project</h2>
+  <h2><br>🌐 [Intro to Cybersecurity]:  Understanding Network Map & Wireshark Usage.</h2>
   <iframe 
     src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/2_NetworkMap_Wireshark.pdf" 
     style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
     </iframe>
-
-  <!-- Second project -->
-  <h2><br>⚙️ Bash Scripting Automation and Network Research Project</h2>
+  <h2><br>🧠 [Linux Fundamentals]: Understanding the usage of bash scripting in Linux Fundamental.</h2>
+  <iframe 
+  src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/1_LinuxFundamental.pdf"
+  style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
+</iframe>
+<h2><br>⚙️ [Network Research]: Bash Scripting Automation and Network Research</h2>
   <iframe 
     src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/3_NetworkResearch_BashScriptingAutomation.pdf" 
      style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
     </iframe>
-
-  <h2><br>🐍 Python Fundamentals Project</h2>
+  <h2><br>🐍 [Python Fundamentals]: Understanding core programming concepts using Python scripting.</h2>
   <iframe 
     src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/4_PythonFundamentals.pdf" 
+     style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
+    </iframe>
+  <h2><br>✏️ [Penetration Testing]: Utilize scripting for comprehensive device mapping, identifying ports, services, and vulnerabilities.</h2>
+  <iframe 
+    src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/5_VulnerAssesment.pdf" 
      style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
     </iframe>
 </body>
