--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
   </style>
 </head>
 <body>
-  <h1>🛡️ Cybersecurity Project Showcase</h1>
+  <h1>🛡️📝 Cybersecurity Project Showcase 📝🛡️</h1>
   <p><br>This site showcases the certificates and projects I have completed during the Cybersecurity Career Kickstart Programme (2023) run by Centre for Cybersecurity (CFC).<br><br></p>
 
    <!-- Horizontal scrolling certificate PDFs -->
-  <h1>🛡️ Certificates obtained from Cybersecurity Career Kickstart Programme (2023) </h1>
+  <h1>📜 Certificates obtained from Cybersecurity Career Kickstart Programme (2023) </h1>
   <div class="certificates-container">
     <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certs/Intro To Cybersecurity_Ivan Wong.pdf"></iframe>
     <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certs/Linux Fundamentals_Ivan Wong.pdf"></iframe>
@@ -100,18 +100,18 @@
     <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certs/Penetration Testing_Ivan Wong.pdf"></iframe>
   </div>
 
-  <h1>🛡️ List of Projects</h1>
+  <h1>📃 List of Projects</h1>
   <p>
   <br>There are four main projects showcased here, and these are the summaries for them:
 </p>
 <ul style="list-style-type: none; padding: 0; text-align: left; max-width: 700px; margin: 20px auto; line-height: 1.8;">
-  <li>🧠 <strong>[Intro to Cybersecurity]:</strong> Understanding Network Map & Wireshark Usage.</li>
+  <li>🙋‍♂️ <strong>[Intro to Cybersecurity]:</strong> Understanding Network Map & Wireshark Usage.</li>
   <li>🧠 <strong>[Linux Fundamentals]:</strong> Understanding the usage of bash scripting in Linux Fundamental.</li>
   <li>🌐 <strong>[Network Research]:</strong> Bash Scripting Automation and Network Research.</li>
   <li>🐍 <strong>[Python Fundamentals]:</strong> Understanding core programming concepts using Python scripting.</li>
-  <li>⚙️ <strong>[Penetration Testing]:</strong> Utilize scripting for comprehensive device mapping, identifying ports, services, and vulnerabilities.</li>
+  <li>🏹 <strong>[Penetration Testing]:</strong> Utilize scripting for comprehensive device mapping, identifying ports, services, and vulnerabilities.</li>
 </ul>
-  <h2><br>🌐 [Intro to Cybersecurity]:  Understanding Network Map & Wireshark Usage.</h2>
+  <h2><br>🙋‍♂️ [Intro to Cybersecurity]:  Understanding Network Map & Wireshark Usage.</h2>
   <iframe 
     src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/2_NetworkMap_Wireshark.pdf" 
     style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
@@ -121,7 +121,7 @@
   src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/1_LinuxFundamental.pdf"
   style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
 </iframe>
-<h2><br>⚙️ [Network Research]: Bash Scripting Automation and Network Research</h2>
+<h2><br>🌐 [Network Research]: Bash Scripting Automation and Network Research</h2>
   <iframe 
     src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/3_NetworkResearch_BashScriptingAutomation.pdf" 
      style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
@@ -131,7 +131,7 @@
     src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/4_PythonFundamentals.pdf" 
      style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
     </iframe>
-  <h2><br>✏️ [Penetration Testing]: Utilize scripting for comprehensive device mapping, identifying ports, services, and vulnerabilities.</h2>
+  <h2><br>🏹 [Penetration Testing]: Utilize scripting for comprehensive device mapping, identifying ports, services, and vulnerabilities.</h2>
   <iframe 
     src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/5_VulnerAssesment.pdf" 
      style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
