--- a/index.html
+++ b/index.html
@@ -112,11 +112,10 @@
   <li>🏹 <strong>[Penetration Testing]:</strong> Utilize scripting for comprehensive device mapping, identifying ports, services, and vulnerabilities.</li>
 </ul>
   <h2><br>🙋‍♂️ [Intro to Cybersecurity]:  Understanding Network Map & Wireshark Usage.</h2>
-  <!--<iframe 
+  <iframe 
     src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/2_NetworkMap_Wireshark.pdf" 
     style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
-    </iframe> -->
-  <iframe src="docs/2_NetworkMap_Wireshark.pdf" style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;"></iframe>
+    </iframe>
   <h2><br>🧠 [Linux Fundamentals]: Understanding the usage of bash scripting in Linux Fundamental.</h2>
   <iframe 
   src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/1_LinuxFundamental.pdf"
