--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <p><br>This site showcases the certificates and projects I have completed during the Cybersecurity Career Kickstart Programme (2023) run by Centre for Cybersecurity (CFC).<br><br></p>
 
    <!-- Horizontal scrolling certificate PDFs -->
-  <h1>📜 Certificates obtained from Cybersecurity Career Kickstart Programme (2023) </h1>
+  <h1>📜 Certificates of Completion 📜</h1>
   <div class="certificates-container">
     <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certs/Intro To Cybersecurity_Ivan Wong.pdf"></iframe>
     <iframe src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/certs/Linux Fundamentals_Ivan Wong.pdf"></iframe>
@@ -102,7 +102,7 @@
 
   <h1>📃 List of Projects</h1>
   <p>
-  <br>There are four main projects showcased here, and these are the summaries for them:
+  <br>There are five main projects showcased here::
 </p>
 <ul style="list-style-type: none; padding: 0; text-align: left; max-width: 700px; margin: 20px auto; line-height: 1.8;">
   <li>🙋‍♂️ <strong>[Intro to Cybersecurity]:</strong> Understanding Network Map & Wireshark Usage.</li>
