--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
   </style>
 </head>
 <body>
+  <h2><br>Hi my name is <Italic>Ivan Wong</Italic>, and welcome to my</h2>
   <h1>🛡️📝 Cybersecurity Project Showcase 📝🛡️</h1>
   <p><br>This site showcases the certificates and projects I have completed during the Cybersecurity Career Kickstart Programme (2023) run by Centre for Cybersecurity (CFC).<br><br></p>
 
