--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
   </style>
 </head>
 <body>
+  <p><br>+65 8843 4725 || hivanwong@gmail.com || https://www.linkedin.com/in/ivan-wong9898/</p>
   <h2><br>Hi my name is <Italic>Ivan Wong</Italic>, and welcome to my</h2>
   <h1>🛡️📝 Cybersecurity Project Showcase 📝🛡️</h1>
   <p><br>This site showcases the certificates and projects I have completed during the Cybersecurity Career Kickstart Programme (2023) run by Centre for Cybersecurity (CFC).<br><br></p>
@@ -103,7 +104,7 @@
 
   <h1>📃 List of Projects</h1>
   <p>
-  <br>There are five main projects showcased here::
+  <br>There are five main projects showcased here:
 </p>
 <ul style="list-style-type: none; padding: 0; text-align: left; max-width: 700px; margin: 20px auto; line-height: 1.8;">
   <li>🙋‍♂️ <strong>[Intro to Cybersecurity]:</strong> Understanding Network Map & Wireshark Usage.</li>
@@ -137,5 +138,8 @@
     src="https://docs.google.com/gview?embedded=true&url=https://ivanwong98.github.io/Cybersecurity-Project-Showcase/docs/5_VulnerAssesment.pdf" 
      style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
     </iframe>
+
+  <p><br>Thank you for your time in visiting my website, do contact me if you made it to here and have a pleasant day!</p>
+  <p>+65 8843 4725 || hivanwong@gmail.com || https://www.linkedin.com/in/ivan-wong9898/</p>
 </body>
 </html>
