--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cybersecurity Project Showcase</title>
+  <title>Ivan's Cybersecurity Project Showcase</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -88,7 +88,7 @@
 </head>
 <body>
   <p><br>+65 8843 4725 || hivanwong@gmail.com || https://www.linkedin.com/in/ivan-wong9898/</p>
-  <h2><br>Hi my name is <Italic>Ivan Wong</Italic>, and welcome to my</h2>
+  <h4><br>Hi my name is <Italic>Ivan Wong</Italic>, and welcome to my</h2>
   <h1>🛡️📝 Cybersecurity Project Showcase 📝🛡️</h1>
   <p><br>This site showcases the certificates and projects I have completed during the Cybersecurity Career Kickstart Programme (2023) run by Centre for Cybersecurity (CFC).<br><br></p>
 
