--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   </style>
 </head>
 <body>
-  <h4><br>Hi my name is <Italic>Ivan Wong</Italic>, and welcome to my</h2>
+  <p><br>Hi my name is <Italic>Ivan Wong</Italic>, and welcome to my</p>
   <h1>🛡️📝 Cybersecurity Project Showcase 📝🛡️</h1>
   <p><br>This site showcases the certificates and projects I have completed during the Cybersecurity Career Kickstart Programme (2023) run by Centre for Cybersecurity (CFC).<br><br></p>
 
@@ -138,7 +138,7 @@
      style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
     </iframe>
 
-  <p><br>Thank you for your time in visiting my website, do contact me if you made it to here and have a pleasant day!</p>
+  <p><br>Thank you for your time in visiting my website, do contact me if you made this far and wish you have a pleasant day!</p>
   <p>+65 8843 4725 || hivanwong@gmail.com || https://www.linkedin.com/in/ivan-wong9898/</p>
 </body>
 </html>
