--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
      style="width:100%; height:80vh; border:1px solid #ccc; border-radius:8px;">
     </iframe>
 
-  <p><br>Do contact me if you come this far, I thank you for your time wish you have a pleasant day!</p>
+  <p><br>Do contact me if you come this far, thank you for your time and wish you have a pleasant day!</p>
   <p>+65 8843 4725 || hivanwong@gmail.com || https://www.linkedin.com/in/ivan-wong9898/</p>
 </body>
 </html>
